--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
 }
 
 
+
 footer {
     text-align: center;
     padding-bottom: 10px;
@@ -40,8 +41,8 @@ footer {
 
 img.zweefLinks {
     float: right;
-    margin-right: 15px;
-    width: 250px;
+    margin-left: 5px;
+    width: 200px;
     height:80%
 }
 
@@ -87,6 +88,11 @@ nav li a:hover {
 nav li a.active {
     background-color: skyblue;
 }
+nav {
+    background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/281c801f-5592-4d99-b195-671abd34121a/d8ar6p-5706a03c-611e-48f1-9f16-76ca8e57646f.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvMjgxYzgwMWYtNTU5Mi00ZDk5LWIxOTUtNjcxYWJkMzQxMjFhXC9kOGFyNnAtNTcwNmEwM2MtNjExZS00OGYxLTlmMTYtNzZjYThlNTc2NDZmLnBuZyJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTpmaWxlLmRvd25sb2FkIl19.S16YC2m6DIQs9GiuOfNmJtGAEyo0NFeWjQrdpTW_1uk);
+    background-repeat: no-repeat
+}
+
 
 
 
